カスタムセル　表示されるがずれている

--- a/sampler1/TableViewCell.xib
+++ b/sampler1/TableViewCell.xib
@@ -59,6 +59,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.99904292819999996" green="0.50673928020000003" blue="0.39419085539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
