--- a/sampler1/TableViewCell.xib
+++ b/sampler1/TableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,53 +14,95 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" restorationIdentifier="Cell1" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell1" rowHeight="166" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="sampler1" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="467" height="166"/>
+            <rect key="frame" x="0.0" y="0.0" width="420" height="166"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="467" height="165.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="165.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zps-LB-HoK">
-                        <rect key="frame" x="20" y="14" width="139" height="137"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zps-LB-HoK">
+                        <rect key="frame" x="30" y="14" width="137" height="137"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="137" id="8iY-Aq-Hdc"/>
+                            <constraint firstAttribute="height" constant="137" id="9Mf-Lj-LkV"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alb-e2-TOt">
-                        <rect key="frame" x="196" y="11" width="146" height="59"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alb-e2-TOt">
+                        <rect key="frame" x="204" y="16" width="146" height="59"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="59" id="CzY-9A-Aiv"/>
+                            <constraint firstAttribute="width" constant="146" id="wnu-to-GhB"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="39"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uw4-nf-4Yc">
-                        <rect key="frame" x="196" y="78" width="51" height="48"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uw4-nf-4Yc">
+                        <rect key="frame" x="204" y="78" width="51" height="48"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="51" id="PkD-RR-6wE"/>
+                            <constraint firstAttribute="height" constant="48" id="fZR-9n-I53"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdT-2y-OSI">
-                        <rect key="frame" x="292" y="77" width="39" height="48"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdT-2y-OSI">
+                        <rect key="frame" x="300" y="82" width="39" height="37"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="37" id="6pv-3t-fRm"/>
+                            <constraint firstAttribute="width" constant="39" id="Zx7-K6-CQi"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81E-xY-0oO">
-                        <rect key="frame" x="339" y="83" width="42" height="34"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81E-xY-0oO">
+                        <rect key="frame" x="347" y="83" width="42" height="34"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="42" id="eOL-dI-rae"/>
+                            <constraint firstAttribute="height" constant="34" id="yMM-hx-B1i"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="月" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVw-Ir-k43">
-                        <rect key="frame" x="242" y="81" width="55" height="38"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVw-Ir-k43">
+                        <rect key="frame" x="250" y="81" width="55" height="38"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="55" id="Ygp-2o-aLM"/>
+                            <constraint firstAttribute="height" constant="38" id="lBI-tU-wUl"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" red="0.99904292819999996" green="0.50673928020000003" blue="0.39419085539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" red="0.80961964070000003" green="1" blue="0.74896406520000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="gVw-Ir-k43" firstAttribute="leading" secondItem="Zps-LB-HoK" secondAttribute="trailing" constant="83" id="2Fy-qv-mM3"/>
+                    <constraint firstItem="81E-xY-0oO" firstAttribute="leading" secondItem="gVw-Ir-k43" secondAttribute="trailing" constant="42" id="35B-CO-jfn"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="uw4-nf-4Yc" secondAttribute="bottom" constant="29" id="A9b-CI-247"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="alb-e2-TOt" secondAttribute="trailing" constant="105" id="Cxm-7Y-MVt"/>
+                    <constraint firstItem="alb-e2-TOt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="E8g-62-4Vy"/>
+                    <constraint firstItem="81E-xY-0oO" firstAttribute="leading" secondItem="tdT-2y-OSI" secondAttribute="trailing" constant="8" id="Gef-fN-oYi"/>
+                    <constraint firstItem="tdT-2y-OSI" firstAttribute="top" secondItem="alb-e2-TOt" secondAttribute="bottom" constant="7" id="IXA-N3-gAx"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="tdT-2y-OSI" secondAttribute="bottom" constant="36" id="JPp-gA-kA7"/>
+                    <constraint firstItem="uw4-nf-4Yc" firstAttribute="top" secondItem="alb-e2-TOt" secondAttribute="bottom" constant="3" id="LZe-er-CsE"/>
+                    <constraint firstItem="81E-xY-0oO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="72" id="NHe-U1-zhf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="81E-xY-0oO" secondAttribute="trailing" constant="66" id="PAT-Hb-UGU"/>
+                    <constraint firstItem="gVw-Ir-k43" firstAttribute="top" secondItem="alb-e2-TOt" secondAttribute="bottom" constant="6" id="Qry-9E-gIZ"/>
+                    <constraint firstItem="Zps-LB-HoK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="Vkz-nF-RjB"/>
+                    <constraint firstItem="Zps-LB-HoK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="XLT-Ck-rZe"/>
+                    <constraint firstItem="Zps-LB-HoK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="Yw8-0R-ogz"/>
+                    <constraint firstItem="alb-e2-TOt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="bpl-8B-fLl"/>
+                    <constraint firstItem="tdT-2y-OSI" firstAttribute="leading" secondItem="uw4-nf-4Yc" secondAttribute="trailing" constant="45" id="gQs-Im-gwW"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="81E-xY-0oO" secondAttribute="bottom" constant="38" id="mHd-eZ-CEU"/>
+                    <constraint firstItem="alb-e2-TOt" firstAttribute="leading" secondItem="Zps-LB-HoK" secondAttribute="trailing" constant="37" id="qdl-58-19t"/>
+                    <constraint firstItem="uw4-nf-4Yc" firstAttribute="leading" secondItem="Zps-LB-HoK" secondAttribute="trailing" constant="37" id="w8E-W6-kL2"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="gVw-Ir-k43" secondAttribute="bottom" constant="36" id="xxi-ue-aDX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Zps-LB-HoK" secondAttribute="bottom" constant="4" id="yMm-nU-8ho"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -68,7 +111,10 @@
                 <outlet property="cellmonthLabel" destination="uw4-nf-4Yc" id="fuV-g3-eZc"/>
                 <outlet property="cellnameLabel" destination="alb-e2-TOt" id="Rnt-gt-us8"/>
             </connections>
-            <point key="canvasLocation" x="-21" y="44"/>
+            <point key="canvasLocation" x="-45" y="44"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="icon.png" width="1536" height="1536"/>
+    </resources>
 </document>
